.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>provar__API_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>API Request</label>
        <referenceTo>provar__API_Request__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Consolidate_to_Test_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Consolidates all generated test cycles into this one</description>
        <inlineHelpText>Consolidates all generated test cycles into this one</inlineHelpText>
        <label>Consolidate to Test Cycle</label>
        <referenceTo>provar__Test_Cycle__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Days_of_the_Week__c</fullName>
        <label>Days of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Days_of_the_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Email_Alerts__c</fullName>
        <label>Email Alerts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Success</fullName>
                </value>
                <value>
                    <fullName>On Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Enable_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Frequency__c</fullName>
        <inlineHelpText>How often is this test plan executed</inlineHelpText>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-off</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Missing_Test_Case_Strategy__c</fullName>
        <inlineHelpText>Select what happens when test results refer to test cases that do not exist in Provar Manager</inlineHelpText>
        <label>Missing Test Case Strategy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                    <default>true</default>
                    <label>Ignore</label>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Schedule_Has_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark when one-off schedules have already run.</description>
        <inlineHelpText>Used to mark when one-off schedules have already run.</inlineHelpText>
        <label>Schedule Has Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Slack_Alerts__c</fullName>
        <label>Slack Alerts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Success</fullName>
                </value>
                <value>
                    <fullName>On Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Slack_Webhook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slack Webhook</label>
        <referenceTo>provar__Slack_Webhook__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>System</label>
        <referenceTo>provar__System__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Type__c</fullName>
        <inlineHelpText>Required when the strategy is to create missing test cases.</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Testing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Tester__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tester</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Test Plan Schedules</relationshipLabel>
        <relationshipName>Test_Plan_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Testing_Tool__c</fullName>
        <label>Testing Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                    <label>Salesforce (Apex)</label>
                </value>
                <value>
                    <fullName>ProvarGrid</fullName>
                    <label>Provar Grid</label>
                </value>
                <value>
                    <fullName>GenericApi</fullName>
                    <label>Generic API</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Time__c</fullName>
        <inlineHelpText>Time of the day in UTC.</inlineHelpText>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <label>Test Plan Schedule</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__System__c</columns>
        <columns>provar__Test_Plan__c</columns>
        <columns>provar__Testing_Tool__c</columns>
        <columns>provar__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TPSCH-{000000}</displayFormat>
        <label>Test Plan Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Slack_Webhook_Is_Required_When_Enabled</fullName>
        <active>true</active>
        <errorConditionFormula>PICKLISTCOUNT(provar__Slack_Alerts__c) &gt; 0 &amp;&amp;  provar__Slack_Webhook__c = NULL</errorConditionFormula>
        <errorMessage>Please, select a Slack Webhook.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>provar__Test_Type_required_to_create_Test_Cases</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( provar__Missing_Test_Case_Strategy__c , &apos;Create&apos;) &amp;&amp; ISBLANK(TEXT(provar__Test_Type__c))</errorConditionFormula>
        <errorMessage>Test Type is required when Missing Test Case Strategy is set to &apos;Create&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>provar__Time_is_required_when_frequency_is_Daily</fullName>
        <active>true</active>
        <description>Time must be defined when the frequency is not &quot;One-off&quot;.</description>
        <errorConditionFormula>NOT(ISPICKVAL(provar__Frequency__c, &apos;One-off&apos;)) &amp;&amp; ISBLANK( provar__Time__c)</errorConditionFormula>
        <errorMessage>Time must be defined when the frequency is not &quot;One-off&quot;.</errorMessage>
    </validationRules>
</CustomObject>